--- a/help/en/index.html
+++ b/help/en/index.html
@@ -51,6 +51,10 @@ for the benefit of the presenter. There is an information tab, and the data
 from this area, as well as the CCLI #, are displayed on the bottom of the
 presentation screen.</p>
 
+<p>The <b>image</b> presentation is used to present images. Add multiple images
+at once by using [shift] or [control] in the add dialog. Rearrange images by
+using drag-and-drop.</p>
+
 
 
 <h1>Backgrounds</h1>
