Issue 17: User can put notifications on the screen.

--- a/help/en/index.html
+++ b/help/en/index.html
@@ -56,6 +56,14 @@ at once by using [shift] or [control] in the add dialog. Rearrange images by
 using drag-and-drop.</p>
 
 
+<h1>Notifications</h1>
+
+<p>You may have a need to notify someone in the audience of something, such as
+a crying baby in the nursury. A notification can be used to let them know. The
+notification can be set using the text box underneath the preview screen. Press
+enter or the 2nd button next to it to set it to the screen. The clear button
+directly next to the box will remove the notification.</p>
+
 
 <h1>Backgrounds</h1>
 
@@ -74,20 +82,19 @@ make the text difficult to read.</p>
 
 <table border='2' cellpadding='5'>
 <tr><th colspan='2'>Screen</th></tr>
-<tr><td>Present</td><td>P</td></tr>
-<tr><td>Background</td><td>B</td></tr>
-<tr><td>Black Screen</td><td>K</td></tr>
-<tr><td>Hide</td><td>H</td></tr>
+<tr><td>Present</td><td>Control-P</td></tr>
+<tr><td>Background</td><td>Control-B</td></tr>
+<tr><td>Black Screen</td><td>Control-K</td></tr>
+<tr><td>Hide</td><td>Control-H</td></tr>
 <tr><th colspan='2'>Slide Movement</th></tr>
-<tr><td>Next Screen</td><td>Period</td></tr>
-<tr><td>Previous Screen</td><td>Comma</td></tr>
+<tr><td>Next Screen</td><td>Control-Period</td></tr>
+<tr><td>Previous Screen</td><td>Control-Comma</td></tr>
 <tr><td><b>Lyrics Type</b></td><td></td></tr>
 <tr><td>Go to Verse #</td><td>1, 2, 3, and so on (Not Implemented)</td></tr>
 <tr><td>Go to Chorus</td><td>C (Not Implemented)</td></tr>
 <tr><td>Go to Bridge</td><td>B (Not Implemented)</td></tr>
 <tr><th colspan='2'>Other</th></tr>
 <tr><td>New Schedule</td><td>Ctrl-N</td></tr>
-<tr><td>Delete Schedule</td><td>(Not Implemented)</td></tr>
 </table>
 
 </div>
