--- a/help/en/index.html
+++ b/help/en/index.html
@@ -25,19 +25,16 @@ slides on the screen.</p>
 
 <p>Schedules are used to create an order of presentations.</p>
 
-<p>To create a schedule, in the menu, select Schedule->New. Name your schedule,
+<p>To create a schedule, in the menu, select Schedule-&gt;New. Name your schedule,
 according to the date or event. Add songs to the schedule by dragging them from
 the library onto the schedule.</p>
-
-<p>It would be a good idea to clean up the schedules by deleting the old ones
-when necessary.</p>
 
 
 
 <h1>Creating Presentations</h1>
 
 <p>Presentations are a set of slides to be presented on the screen. To create
-a new presentation, on the menu, select Presentation->New, and then the
+a new presentation, on the menu, select Presentation-&gt;New, and then the
 appropriate presentation type.</p>
 
 <p>When editing, each paragraph is it's own slide.</p>
@@ -82,13 +79,16 @@ make the text difficult to read.</p>
 
 <table border='2' cellpadding='5'>
 <tr><th colspan='2'>Screen</th></tr>
-<tr><td>Present</td><td>Control-P</td></tr>
-<tr><td>Background</td><td>Control-B</td></tr>
-<tr><td>Black Screen</td><td>Control-K</td></tr>
-<tr><td>Hide</td><td>Control-H</td></tr>
+<tr><td>Present</td><td>P</td></tr>
+<tr><td>Background</td><td>B</td></tr>
+<tr><td>Logo Screen</td><td>Control-G</td></tr>
+<tr><td>Black Screen</td><td>K</td></tr>
+<tr><td>Hide</td><td>H</td></tr>
 <tr><th colspan='2'>Slide Movement</th></tr>
-<tr><td>Next Screen</td><td>Control-Period</td></tr>
-<tr><td>Previous Screen</td><td>Control-Comma</td></tr>
+<tr><td>Next Screen</td><td>Control-Right</td></tr>
+<tr><td>Previous Screen</td><td>Control-Left</td></tr>
+<tr><td>Next Presentation</td><td>Control-Shift-Right</td></tr>
+<tr><td>Previous Presentation</td><td>Control-Shift-Left</td></tr>
 <tr><td><b>Lyrics Type</b></td><td></td></tr>
 <tr><td>Go to Verse #</td><td>1, 2, 3, and so on (Not Implemented)</td></tr>
 <tr><td>Go to Chorus</td><td>C (Not Implemented)</td></tr>
