--- a/help/en/index.html
+++ b/help/en/index.html
@@ -37,7 +37,8 @@ the library onto the schedule.</p>
 a new presentation, on the menu, select Presentation-&gt;New, and then the
 appropriate presentation type.</p>
 
-<p>When editing, each paragraph is it's own slide.</p>
+<p>Add, edit, or delete slides using the toolbar buttons. You can drag and
+drop slides to reorder the slides.</p>
 
 <p>The <b>text</b> presentation is used to create a non-specific, text slide.
 It can be used for sermons, announcements, or anything else.</p>
@@ -47,6 +48,10 @@ descriptors, such as "Verse #", "Chorus", "Bridge", or "Refrain", which are
 for the benefit of the presenter. There is an information tab, and the data
 from this area, as well as the CCLI #, are displayed on the bottom of the
 presentation screen.</p>
+
+<p>Lyric presentations can also be reordered. Use the letters use <i>v1</i> to
+<i>v9</i> for a verse, <i>c</i> for chorus, <i>r</i> for refrain, <i>b</i> for
+bridge, and <i>e</i> for ending.</p>
 
 <p>The <b>image</b> presentation is used to present images. Add multiple images
 at once by using [shift] or [control] in the add dialog. Rearrange images by
@@ -67,12 +72,11 @@ directly next to the box will remove the notification.</p>
 <p>The background image for presentations can be a gradient or an
 image file. Change the image by using the buttons next to the preview screen.</p>
 
-<h2>Image Tips</h2>
+<h2>Background Image Tips</h2>
 
 <p>Background images should generally have a soft focus to them, and use a
 minimal amount of contrast. Backgrounds with hard lines, or with many colors
 make the text difficult to read.</p>
-
 
 
 <h1>Shortcut Keys</h1>
@@ -90,9 +94,8 @@ make the text difficult to read.</p>
 <tr><td>Next Presentation</td><td>Control-Shift-Right</td></tr>
 <tr><td>Previous Presentation</td><td>Control-Shift-Left</td></tr>
 <tr><td><b>Lyrics Type</b></td><td></td></tr>
-<tr><td>Go to Verse #</td><td>1, 2, 3, and so on (Not Implemented)</td></tr>
-<tr><td>Go to Chorus</td><td>C (Not Implemented)</td></tr>
-<tr><td>Go to Bridge</td><td>B (Not Implemented)</td></tr>
+<tr><td>Go to Verse #</td><td>1, 2, 3, and so on</td></tr>
+<tr><td>Go to Chorus</td><td>c</td></tr>
 <tr><th colspan='2'>Other</th></tr>
 <tr><td>New Schedule</td><td>Ctrl-N</td></tr>
 </table>
