Updated German translation and help, also expanded section "Shortcuts"

--- a/help/en/index.html
+++ b/help/en/index.html
@@ -89,15 +89,18 @@ make the text difficult to read.</p>
 <tr><td>Black Screen</td><td>K</td></tr>
 <tr><td>Hide</td><td>H</td></tr>
 <tr><th colspan='2'>Slide Movement</th></tr>
-<tr><td>Next Screen</td><td>Control-Right</td></tr>
-<tr><td>Previous Screen</td><td>Control-Left</td></tr>
-<tr><td>Next Presentation</td><td>Control-Shift-Right</td></tr>
-<tr><td>Previous Presentation</td><td>Control-Shift-Left</td></tr>
-<tr><td><b>Lyrics Type</b></td><td></td></tr>
+<tr><td>Next Screen</td><td>Down</td></tr>
+<tr><td>Previous Screen</td><td>Up</td></tr>
+<tr><td>Next Screen (Use Order)</td><td>PageDown</td></tr>
+<tr><td>Previous Screen (Use Order)</td><td>PageUp</td></tr>
+<tr><td>Next Presentation</td><td>Control-PageDown</td></tr>
+<tr><td>Previous Presentation</td><td>Control-PageUp</td></tr>
+<tr><th colspan='2'>Lyrics type</th></tr>
 <tr><td>Go to Verse #</td><td>1, 2, 3, and so on</td></tr>
 <tr><td>Go to Chorus</td><td>c</td></tr>
 <tr><th colspan='2'>Other</th></tr>
 <tr><td>New Schedule</td><td>Ctrl-N</td></tr>
+<tr><td>Find presenation</td><td>/</td></tr>
 </table>
 
 </div>
