--- a/help/de/index.html
+++ b/help/de/index.html
@@ -16,8 +16,8 @@
 <h1>Kurzbeschreibung</h1>
 
 <p>ExpoSong ist ein freies, Open Source Pr&auml;sentationsprogramm mit dem Ziel 
-Worship so einfach wie m&ouml;glich zu machen. Erstellen Sie Liedtexte oder reine
-Text-Pr&auml;sentationen, erstellen Sie Ablaufpl&auml;ne und werfen Sie Folien an die 
+Lobpreis so einfach wie m&ouml;glich zu machen. Erstellen Sie Liedtexte oder reine
+Text-Pr&auml;sentationen, erstellen Sie Ablaufpl&auml;ne und werfen Sie Ihre Folien an die 
 Leinwand.</p>
 
 
@@ -30,48 +30,58 @@ Leinwand.</p>
 gew&uuml;nschten Namen Ihres Ablaufplans ein. F&uuml;gen Sie Lieder zum Ablaufplan hinzu, indem 
 Sie diese von der Bibliothek in den Ablaufplan ziehen.</p>
 
-<p>Eine gute Idee w&auml;re, wenn n&ouml;tig, die alten Ablaufpl&auml;ne zu l&ouml;schen.</p>
-
-
 
 <h1>Pr&auml;sentationen erstellen</h1>
 
 <p>Pr&auml;sentationen sind eine Sammlung von Folien, die auf dem Bildschirm pr&auml;sentiert 
-werden sollen. Um eine neue Pr&auml;sentation zu erstellen w&auml;hlen Sie im Men&uuml; Pr&auml;sentation->Neu.
-W&auml;hlen Sie dann im Untermen&uuml; den gew&uuml;nschten Pr&auml;sentationstyp aus.</p>
+werden sollen. Um eine neue Pr&auml;sentation zu erstellen w&auml;hlen Sie im Men&uuml; Pr&auml;sentation->Neu
+und dann den gew&uuml;nschten Pr&auml;sentationstyp aus.</p>
 
-<p>Jeder Abschnitt im Editor steht f&uuml;r eine Folie.</p>
+<p>Das Hinzuf&uuml;gen, Bearbeiten oder L&ouml;schen von Folien geschieht mit den
+Toolbar-Eintr&auml;gen. Um Ihre Folien neu anzuordnen, ziehen Sie sie einfach an
+die gew&uuml;nschte Stelle.</p>
 
-<p>Die <b>Text</b>-Pr&auml;sentation wird verwendet um nicht-spezifische Textfolien zu erstellen.
-Sie kann f&uuml;r Predigten, Ank&uuml;ndigungen oder andere Informationen eingesetzt werden.</p>
+<p>Die <b>Text</b>-Pr&auml;sentation wird verwendet um nicht-spezifische
+Textfolien zu erstellen. Sie kann f&uuml;r Predigten, Ank&uuml;ndigungen oder
+andere Informationen eingesetzt werden.</p>
 
-<p>Die <b>Lieder</b>-Pr&auml;sentation ist f&uuml;r Liedtexte gedacht. Sie verwendet Folien-Marker,
-wie z.B. "Verse #", "Chorus", "Bridge" oder "Refrain", die das Pr&auml;sentieren wesentlich 
-vereinfachen. Es gibt einen Informationen-Tabulator, de&szlig;en Daten zusammen mit der 
+<p>Die <b>Lieder</b>-Pr&auml;sentation ist f&uuml;r Liedtexte gedacht.
+Sie verwendet Folien-Marker, wie z.B. "Verse #", "Chorus", "Bridge" oder
+"Refrain", die das Pr&auml;sentieren wesentlich vereinfachen. Es gibt einen
+Informationen-Tabulator, dessen Daten zusammen mit der 
 CCLI Nummer am unteren Bilschirm-Rand angezeigt werden.</p>
 
-<p>Die <b>Bilder</b>-Pr&auml;sentation wird verwendet um Bilder zu pr&auml;sentieren. F&uuml;gen Sie 
-mehrere Bilder auf einmal hinzu, indem sie im Auswahl-Dialog die Shift- oder Str-Taste
-dr&uuml;cken. &auml;ndern Sie die Reihenfolge der Bilder durch drag&drop.</p>
+<p>Lieder-Pr&auml;sentationen k&ouml;nnen mit einer Reihenfolge versehen werden.
+Benutzen Sie daf&uuml;r Buchstaben <i>v1</i> bis <i>v9</i> f&uuml;r "Verse",
+<i>c</i> f&uuml;r "Chorus", <i>r</i> f&uuml;r "Refrain", <i>b</i> f&uuml;r "Bridge" und e
+f&uuml;r "Ending".</p>
+
+<p>Die <b>Bilder</b>-Pr&auml;sentation wird verwendet um Bilder zu
+pr&auml;sentieren. F&uuml;gen Sie mehrere Bilder auf einmal hinzu, indem sie
+im Auswahl-Dialog die Shift- oder Strg-Taste dr&uuml;cken.
+&Auml;ndern Sie die Reihenfolge der Bilder, indem Sie die Bilder ziehen
+und an der gew&uuml;nschten Position ablegen.</p>
 
 
 <h1>Mitteilungen</h1>
 
-<p>M&ouml;glicherweise m&uuml;&szlig;en sie jemandem im Saal &uuml;ber etwas informieren, z.B. ein
-weinendes Baby im Kinderraum. Dies kann mit einer Mitteilung gemacht werden. Die
-Mitteilung kann in der Textbox unter dem Vorschau-Fenster eingegeben werden. 
-Dr&uuml;cken Sie die Enter-Taste oder den zweiten Button neben der Textbox um die
-Mitteilung sichtbar zu machen. Der Button neben der Textbox wird die Mitteilung
+<p>M&ouml;glicherweise m&uuml;&szlig;en sie jemandem im Saal &uuml;ber etwas
+informieren, z.B. &uuml;ber ein weinendes Baby im Kinderraum.
+Dies kann mit einer Mitteilung gemacht werden.
+Die Mitteilung kann in der Textbox unter dem Vorschau-Fenster eingegeben werden.
+Dr&uuml;cken Sie die Enter-Taste oder den zweiten Schaltfl&auml;che
+neben der Textbox um die Mitteilung sichtbar zu machen.
+Die Schaltfl&auml;che neben der Textbox wird die Mitteilung
 wieder l&ouml;schen.</p>
 
 
 <h1>Hintergr&uuml;nde</h1>
 
-<p>Das Hintergrundbild von Pr&auml;sentationen kann entweder ein Farb&uuml;bergang oder eine
-Bild-Datei sein. &Auml;ndern Sie das Bild indem Sie die die Buttons links neben dem 
-Vorschau-Bildschirm benutzen.</p>
+<p>Das Hintergrundbild von Pr&auml;sentationen kann entweder ein
+Farb&uuml;bergang oder eine Bild-Datei sein. &Auml;ndern Sie das Bild indem
+Sie die die Schaltfl&auml;chen links neben dem Vorschau-Bildschirm benutzen.</p>
 
-<h2>Tips zu Bildern</h2>
+<h2>Tipps f&uuml;r Hintergrundbilder</h2>
 
 <p>Hintergrundbilder sollten generell einen weichen Fokus und einen schwachen Kontrast
 haben. Hintergr&uuml;nde mit harten Konturen oder mit vielen Farben machen das Lesen
@@ -83,19 +93,24 @@ des Textes schwer.</p>
 
 <table border='2' cellpadding='5'>
 <tr><th colspan='2'>Leinwand</th></tr>
-<tr><td>Pr&auml;sentieren</td><td>Str-P</td></tr>
-<tr><td>Hintergrund</td><td>Str-B</td></tr>
-<tr><td>Schwarzer Bildschirm</td><td>Str-K</td></tr>
-<tr><td>Verstecken</td><td>Str-H</td></tr>
+<tr><td>Pr&auml;sentieren</td><td>F5</td></tr>
+<tr><td>Hintergrund</td><td>Alt-b</td></tr>
+<tr><td>Schwarzer Bildschirm</td><td>b</td></tr>
+<tr><td>Verstecken</td><td>Esc</td></tr>
 <tr><th colspan='2'>Folien&uuml;bergang</th></tr>
-<tr><td>N&auml;chste Folie</td><td>Str-Punkt</td></tr>
-<tr><td>Vorherige Folie</td><td>Str-Komma</td></tr>
-<tr><td><b>Text Typ</b></td><td></td></tr>
-<tr><td>Gehe zu Strophe #</td><td>1, 2, 3, und so weiter (Nicht implementiert)</td></tr>
-<tr><td>Gehe zum Chorus</td><td>C (Nicht implementiert)</td></tr>
-<tr><td>Gehe zur Bridge</td><td>B (Nicht implementiert)</td></tr>
+<tr><td>N&auml;chste Folie</td><td>Pfeil unten</td></tr>
+<tr><td>Vorherige Folie</td><td>Pfeil oben</td></tr>
+<tr><td>N&auml;chste Folie (Reihenfolge beachten)</td><td>Bild runter</td></tr>
+<tr><td>Vorherige Folie (Reihenfolge beachten)</td><td>Bild hoch</td></tr>
+<tr><td>N&auml; Pr&auml;sentation</td><td>Strg-Bild runter</td></tr>
+<tr><td>Previous Presentation</td><td>Strg-Bild hoch</td></tr>
+<tr><th colspan='2'>Lieder-Pr&auml;sentation</th></tr>
+<tr><td>Gehe zu Strophe #</td><td>1, 2, 3 usw.</td></tr>
+<tr><td>Gehe zum Chorus</td><td>C</td></tr>
+<tr><td>Gehe zur Bridge</td><td>B</td></tr>
 <tr><th colspan='2'>Sonstiges</th></tr>
 <tr><td>Neuer Ablaufplan</td><td>Str-N</td></tr>
+<tr><td>Pr&auml;sentation suchen</td><td>/</td></tr>
 </table>
 
 </div>
