Fixing a problem with Logo, updating shortcuts (I hope this is ok?)

--- a/share/exposong/help/de/index.html
+++ b/share/exposong/help/de/index.html
@@ -94,14 +94,14 @@ des Textes schwer.</p>
 <table border='2' cellpadding='5'>
 <tr><th colspan='2'>Leinwand</th></tr>
 <tr><td>Pr&auml;sentieren</td><td>F5</td></tr>
-<tr><td>Hintergrund</td><td>Alt-b</td></tr>
+<tr><td>Hintergrund</td><td>k</td></tr>
 <tr><td>Schwarzer Bildschirm</td><td>b</td></tr>
 <tr><td>Verstecken</td><td>Esc</td></tr>
 <tr><th colspan='2'>Folien&uuml;bergang</th></tr>
 <tr><td>N&auml;chste Folie</td><td>Pfeil unten</td></tr>
 <tr><td>Vorherige Folie</td><td>Pfeil oben</td></tr>
-<tr><td>N&auml;chste Folie (Reihenfolge beachten)</td><td>Bild runter</td></tr>
-<tr><td>Vorherige Folie (Reihenfolge beachten)</td><td>Bild hoch</td></tr>
+<tr><td>N&auml;chste Folie (Reihenfolge benutzen)</td><td>Bild runter</td></tr>
+<tr><td>Vorherige Folie (Reihenfolge benutzen)</td><td>Bild hoch</td></tr>
 <tr><td>N&auml; Pr&auml;sentation</td><td>Strg-Bild runter</td></tr>
 <tr><td>Previous Presentation</td><td>Strg-Bild hoch</td></tr>
 <tr><th colspan='2'>Lieder-Pr&auml;sentation</th></tr>
