--- a/share/exposong/help/en/index.html
+++ b/share/exposong/help/en/index.html
@@ -83,11 +83,11 @@ make the text difficult to read.</p>
 
 <table border='2' cellpadding='5'>
 <tr><th colspan='2'>Screen</th></tr>
-<tr><td>Present</td><td>P</td></tr>
+<tr><td>Present</td><td>F5</td></tr>
 <tr><td>Background</td><td>B</td></tr>
 <tr><td>Logo Screen</td><td>Control-G</td></tr>
 <tr><td>Black Screen</td><td>K</td></tr>
-<tr><td>Hide</td><td>H</td></tr>
+<tr><td>Hide</td><td>Esc</td></tr>
 <tr><th colspan='2'>Slide Movement</th></tr>
 <tr><td>Next Screen</td><td>Down</td></tr>
 <tr><td>Previous Screen</td><td>Up</td></tr>
